<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">How Much</string>
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_history">History</string>
    <string name="nav_bar_menu">Menu</string>
    <string name="share_shopping_cart">Share shopping cart</string>
    <string name="share_cart_token">Share cart token</string>
    <string name="currency">$ %1$s</string>
    <string name="add_product">Add product</string>
    <string name="register_product">Register product</string>
    <string name="price">Price</string>
    <string name="clean_price">Clear price</string>
    <string name="product_name">Product name</string>
    <string name="clean">Clear</string>
    <string name="decrease_quantity">Decrease quantity</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="share_cart">Share cart</string>
    <string name="share_shopping_list">Share shopping list</string>
    <string name="share_token">Share token</string>
    <string name="token">Token: %1$s</string>
    <string name="checkout_cart">Checkout cart</string>
    <string name="market_name">Market name</string>
    <string name="price_paid">Price paid</string>
    <string name="message_error_field_required_finaliza_purchase">All fields are required and the price must be greater than zero</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="checkout">Checkout</string>
    <string name="quantity">Quantity: %1$d</string>
    <string name="cart_summary">Cart summary</string>
    <string name="shopping_cart_icon">Shopping cart icon</string>
    <string name="close_quantity_controls">Close quantity controls</string>
    <string name="open_quantity_controls">Open quantity controls</string>
    <string name="spending_limit">Spending limit</string>
    <string name="total_money_spent">Total spent:</string>
    <string name="limit">Limit:</string>
    <string name="savings_icon">Savings icon</string>
    <string name="you_economized">You saved</string>
    <string name="enter_the_digit_code">Enter the %1$d-digit code</string>
    <string name="send">Send</string>
    <string name="selected">%1$d selected</string>
    <string name="cancel_select_it">Cancel selection</string>
    <string name="select_all">Select all</string>
    <string name="delete_selected">Delete selected</string>
    <string name="select_items">Select items</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="current_month">Current month</string>
    <string name="click_to_read_more">Click to read more</string>
    <string name="history">History</string>
    <string name="rate_on_google_play">Rate on Google Play</string>
    <string name="menu">Menu</string>
    <string name="access">Access</string>
    <string name="edit_limit">Edit limit</string>
    <string name="save">Save</string>
    <string name="set_cart_limit">Set cart limit</string>
    <string name="limit_text">Limit</string>
    <string name="cart">Cart</string>
    <string name="list">List</string>
    <string name="action_cancel">cancel</string>
    <string name="action_confirm">confirm</string>
    <string name="menu_subscription">Subscription</string>
    <string name="subscribe">Subscribe</string>
    <string name="current_plan">Current plan</string>
    <string name="back">back</string>
    <string name="history_detail">History Detail</string>
    <string name="create_list_from_history">Create list from history</string>
    <string name="history_detail_share_shopping_cart">Shopping Cart: %1$s</string>
    <string name="history_detail_share_date">Date: %1$s</string>
    <string name="history_detail_share_total">Total: %1$s</string>
    <string name="history_detail_share_items">\nItems:\n</string>
    <string name="history_detail_share_item_format">- %1$s: %2$d x %3$s = %4$s\n</string>
    <string name="history_detail_share_subject">Shopping Cart from %1$s</string>
</resources>
