...
                                Checkbox(
                                    modifier = Modifier
                                        .align(Alignment.CenterVertically)
                                        .semantics {
                                            testTagsAsResourceId = true
                                        }
                                        .testTag("check_product"),
                                    checked = product?.isChecked ?: false,
                                    onCheckedChange = { onCheckedChange.invoke(it) }
                                )
                            }
                            Column {
                                if (product?.name.isNullOrBlank().not()) {
...
