...
                },
                actions = {
                    if (isPremium) {
                        IconButton(
                            modifier = Modifier
                                .semantics { testTagsAsResourceId = true }
                                .testTag("enter_cart"),
                            enabled = uiState.token != null,
                            onClick = {
                                navController.navigate(TokenBottomSheetRoute(uiState.token.orEmpty()))
                                trackClick(
                                    viewId = "header_enter_cart",
                                    viewName = "Header Enter Cart",
...
