appId: br.com.brunocarvalhs.howmuch
---
- launchApp
- tapOn: "Add product"
- tapOn: "Product name"
- inputText: "Maestro Test Product"
- tapOn: "Price"
- inputText: "1234"
- tapOn:
    id: "increase_quantity"
    repeat: 4
- tapOn:
    id: "decrease_quantity"
    repeat: 2
- tapOn: "Add product"
- assertVisible: "Maestro Test Product"
- longPressOn:
    text: "Maestro Test Product"
- assertVisible: "Product name"
- assertVisible: "Maestro Test Product"
- assertVisible: "Price"
- assertVisible: "3"
- tapOn: "Product name"
- tapOn:
    id: "clean_product_name"
- inputText: "Maestro Test Product Edited"
- tapOn: "Price"
- eraseText
- inputText: "5678"
- tapOn:
      id: "decrease_quantity"
      repeat: 2
- tapOn: "confirm"
- assertVisible: "Maestro Test Product Edited"
